[gd_scene load_steps=38 format=3 uid="uid://mkigtmd6tj2b"]

[ext_resource type="Texture2D" uid="uid://b0tqa81qkfu7l" path="res://assets/brackeys_platformer_assets/sprites/slime_green.png" id="1_03jvd"]
[ext_resource type="Script" path="res://scripts/hazard_2.gd" id="1_edavr"]
[ext_resource type="Texture2D" uid="uid://b06phbj6nloqy" path="res://assets/brackeys_platformer_assets/sprites/coin.png" id="3_so6te"]
[ext_resource type="Texture2D" uid="uid://drwf3ndao4ep5" path="res://assets/MinifolksVillagers/Blue/Outline/MiniThief.png" id="4_l85wk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o1htj"]
atlas = ExtResource("1_03jvd")
region = Rect2(2, 8, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_euwtx"]
atlas = ExtResource("1_03jvd")
region = Rect2(25, 8, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0tno"]
atlas = ExtResource("1_03jvd")
region = Rect2(48, 8, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ql8"]
atlas = ExtResource("1_03jvd")
region = Rect2(71, 8, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n22b"]
atlas = ExtResource("3_so6te")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e184b"]
atlas = ExtResource("3_so6te")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_66mkd"]
atlas = ExtResource("3_so6te")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c64m4"]
atlas = ExtResource("3_so6te")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl6du"]
atlas = ExtResource("3_so6te")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk20i"]
atlas = ExtResource("3_so6te")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4taxe"]
atlas = ExtResource("3_so6te")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnh7o"]
atlas = ExtResource("3_so6te")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlvdu"]
atlas = ExtResource("3_so6te")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jtas"]
atlas = ExtResource("3_so6te")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvibi"]
atlas = ExtResource("3_so6te")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6hxr"]
atlas = ExtResource("3_so6te")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qjov"]
atlas = ExtResource("1_03jvd")
region = Rect2(2, 31, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hgh5"]
atlas = ExtResource("1_03jvd")
region = Rect2(25, 31, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hn68"]
atlas = ExtResource("1_03jvd")
region = Rect2(71, 31, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_w67qu"]
atlas = ExtResource("1_03jvd")
region = Rect2(48, 31, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc7fu"]
atlas = ExtResource("4_l85wk")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbomh"]
atlas = ExtResource("4_l85wk")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_08svw"]
atlas = ExtResource("4_l85wk")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_di5fg"]
atlas = ExtResource("4_l85wk")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gupsx"]
atlas = ExtResource("4_l85wk")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n4pr"]
atlas = ExtResource("4_l85wk")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3c7q"]
atlas = ExtResource("4_l85wk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5o7l"]
atlas = ExtResource("4_l85wk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtva2"]
atlas = ExtResource("4_l85wk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajvj3"]
atlas = ExtResource("4_l85wk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n2xoy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1htj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euwtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0tno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ql8")
}],
"loop": true,
"name": &"awake",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n22b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e184b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66mkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c64m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl6du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk20i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4taxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnh7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlvdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jtas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvibi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6hxr")
}],
"loop": true,
"name": &"coin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qjov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hgh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hn68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w67qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w67qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hn68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hgh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qjov")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc7fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbomh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08svw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di5fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gupsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n4pr")
}],
"loop": true,
"name": &"running",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3c7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5o7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtva2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajvj3")
}],
"loop": true,
"name": &"standing",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwfy1"]
size = Vector2(31, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_elheo"]
radius = 80.025

[node name="hazard1" type="Area2D"]
position = Vector2(69, 34)
script = ExtResource("1_edavr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.5, -1.5)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_n2xoy")
animation = &"standing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 23)
shape = SubResource("RectangleShape2D_iwfy1")

[node name="playerInRange" type="Area2D" parent="."]

[node name="playerRange" type="CollisionShape2D" parent="playerInRange"]
position = Vector2(5, 23)
shape = SubResource("CircleShape2D_elheo")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="playerInRange" to="." method="_on_player_in_range_body_entered"]
[connection signal="body_exited" from="playerInRange" to="." method="_on_player_in_range_body_exited"]
